# chansondufenua

./: .gitignore  ARCHITECTURE.xml  CONTRIBUTING.md  Cargo.toml  README.md  env.example  rust-analyzer.toml
api/: Cargo.toml
api/src/: artist.rs  core.rs  lib.rs  route.rs  song.rs
app/: Cargo.toml
app/src/: app.rs  lib.rs
app/src/api/: artist.rs  mod.rs  song.rs
app/src/components/: mod.rs
app/src/components/body/: header.rs  mod.rs
app/src/components/editor/: area.rs  buttons.rs  mod.rs  utils.rs
app/src/pages/: index.rs  mod.rs
app/src/pages/himene/: allsong.rs  createsong.rs  mod.rs  song.rs
core/: Cargo.toml
core/src/: state.rs
database/: Cargo.toml
database/migrations/: surrealdb
database/src/: database.rs  lib.rs  surrealdb.rs
domain/: Cargo.toml
domain/src/: cli.rs  error.rs  errors.rs  forms.rs  lib.rs
domain/src/entities/: artist.rs  mod.rs  song.rs
public/: humans.txt  robots.txt  sitemap.xml
server/: Cargo.toml
server/src/: cache.rs  image.rs  main.rs  sitemap.rs  sitemaps.rs
style/: editor.scss  main.scss  tailwind.scss
web/: Cargo.toml
web/src/: lib.rs
