[package]
name = "api"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
crate_core = { path = "../core", optional = true }

leptos.workspace = true
axum = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }

[features]
ssr = [
    "leptos/ssr",
    "dep:axum",
    "dep:crate_core",
    "dep:leptos_axum",
]
