[package]
name = "app"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain" }
crate_core = { path = "../core", optional = true }

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
axum = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }

serde.workspace = true
chrono.workspace = true
eserde.workspace = true
thiserror.workspace = true

web-sys = { version = "0.3.69", features = [
    "Range",
    "Selection",
    "MediaQueryList",
] }

[features]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:crate_core",
    "dep:leptos_axum",
]
hydrate = ["leptos/hydrate"]
