[package]
name = "database"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain", features = ["ssr"] }

serde.workspace = true
eserde.workspace = true
ammonia.workspace = true
surrealdb.workspace = true

logging = "0.1.0"
async-trait = "0.1.88"
