[package]
name = "database"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
domain = { path = "../domain", features = ["ssr"] }

log.workspace = true
serde.workspace = true
eserde.workspace = true
ammonia.workspace = true
surrealdb.workspace = true

async-trait = "0.1.88"
