[package]
name = "server"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
api = { path = "../api" }
app = { path = "../app" }
crate_core = { path = "../core" }
domain = { path = "../domain" }
database = { path = "../database" }

axum.workspace = true
leptos.workspace = true
leptos_axum.workspace = true
leptos_meta.workspace = true

log.workspace = true

tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

anyhow = "1.0.88"
dotenvy = "0.15.7"
headless_chrome = "=1.0.16"
tikv-jemallocator = "0.6.0"
cached = { version = "0.55", features = ["async"] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
] }

[features]
ssr = ["app/ssr", "leptos/ssr", "leptos_meta/ssr"]
