[package]
name = "web"
edition.workspace = true
version.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
app = { path = "../app" }

leptos.workspace = true

wasm-bindgen = "=0.2.100"
console_error_panic_hook = "0.1.7"

[features]
# activate hydrate for linter
default = ["hydrate"]
hydrate = ["app/hydrate", "leptos/hydrate"]
